--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-# Project exclude paths
+# Compiled class file
+*.class
+# Java Files
+*.java
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Project Files
 /out/
 /target/
-Documentation/
-src/
-main/
-.idea/
-*.java
-*.png
-pom.xml
 
+# Documentation
+Documentation/
